--- a/Ausarbeitung/Heuristiken.tex
+++ b/Ausarbeitung/Heuristiken.tex
@@ -5,21 +5,31 @@ Im Folgenden werden alle Fahrer das gleiche Ziel haben. dieses befindet sich am 
 
 Insgesamt gibt es viele Bewertungskriterien für einen guten Parkplatz. Fahranfänger könnten einen Parkplatz vorziehen, der sich relativ weit entfernt von der Destination befindet, wo jedoch nicht viel Betrieb ist, wodurch sie beim Aus- oder Einparken weniger Stress ausgesetzt sind. Im Sommer könnten Parkplätze die im Schatten liegen bevorzugt werden. Im Allgemeinen Fall kann man aber annehmen, dass ein Parkplatz dann als gut gilt, wenn er sich möglichst nah an der Destination befindet. Dadurch ist die Laufzeit zum Ziel optimiert und, falls es sich bei dem Ziel um ein Einkaufszentrum oder ähnliches handelt, müssen die Einkäufe auf dem Rückweg auch nur kurz getragen werden.
 
-Hutchinson stellt 7 Heuristiken vor, nach denen ein Parkplatz gesucht werden kann. An diesen orientiert sich diese Arbeit auch. \\
-Zunächst gibt es die \emph{fixed-distance heuristic}, dabei fährt der Suchende bis zu einer festen Distanz an das Ziel heran und wählt dann den nächsten freien Parkplatz. Sehr ähnlich funktioniert die \emph{proportional-distance heuristic}, bei welcher der Fahrer die Strecke zwischen dem ersten geparkten Auto und dem Ziel nimmt und einen bestimmten Teil dieser Strecke bis zum Ziel heran fährt, um dann den nächsten freien Parkplatz zu wählen.
+Hutchinson et al \cite[A Selection of Simple Parking Heuristics, S. 10]{hutchinson} stellt 7 Heuristiken vor, nach denen ein Parkplatz gesucht werden kann. An diesen orientiert sich diese Arbeit auch. \\
+Zunächst gibt es die \emph{Fixed-Distance}-Heuristik. Dabei fährt der Suchende bis zu einer festen Distanz an das Ziel heran und wählt dann den nächsten freien Parkplatz. Sehr ähnlich funktioniert die \emph{Proportional-Distance}-Heuristik, bei welcher der Fahrer die Strecke zwischen dem ersten geparkten Auto und dem Ziel nimmt und einen bestimmten Teil dieser Strecke bis zum Ziel heran fährt, um dann den nächsten freien Parkplatz zu wählen. Aufgrund der großen Ähnlichkeit der beiden Heuristiken wird in den Simulationen stellvertretend nur die \emph{Fixed-Distance}-Heuristik betrachtet.
 
-Zusätzlich werden die \emph{car-count heuristic} und die \emph{space-count heuristic} vorgestellt. Bei der ersten Variante wählt der Fahrer den ersten freien Parkplatz, nachdem er an einer bestimmten Anzahl an geparkten Autos vorbei gefahren ist. Sobald der Fahrer an dem ersten geparkten Auto und danach an einer bestimmten Anzahl an freien Plätzen vorbei gefahren ist, wählt er bei der space-count heuristic den nächsten freien Platz.
+Zusätzlich werden die \emph{Car-Count}-Heuristik und die \emph{Space-Count}- Heuristik vorgestellt. Bei der ersten Variante wählt der Fahrer den ersten freien Parkplatz, nachdem er an einer bestimmten Anzahl an geparkten Autos vorbei gefahren ist. Sobald der Fahrer an dem ersten geparkten Auto und danach an einer bestimmten Anzahl an freien Plätzen vorbei gefahren ist, wählt er bei der \emph{Space-Count}-Heuristik den nächsten freien Platz.
 
-Bei der \emph{block-count heuristic} wählt der Fahrer einen Parkplatz, wenn er zuvor an einer gewählten Anzahl an geparkten Autos, ohne einen freien Platz dazwischen, vorbei gefahren ist.\\
-Ähnlich funktioniert die \emph{x-out-of-y heuristic}, wobei der Fahrer einen Platz wählt, wenn er an y (oder weniger) Plätzen vorbei gefahren ist und innerhalb dieses Blockes mindestens x Plätze besetzt waren. 
+Bei der \emph{Block-Count}-Heuristik wählt der Fahrer einen Parkplatz, wenn er zuvor an einer gewählten Anzahl an direkt nebeneinander geparkten Autos vorbei gefahren ist.\\
+Ähnlich funktioniert die \emph{X-Out-Of-Y}-Heuristik, wobei der Fahrer einen Platz wählt, wenn er an $y$ Plätzen vorbei gefahren ist und innerhalb dieses Blockes mindestens x Plätze besetzt waren. 
 
-Zuletzt wird die \emph{linear-operator heuristic} beschrieben. Dabei wird ständig der Wert $z_i$, wie folgt, berechnet: $z_i=a\cdot z_{i-1}+b_i$. Dabei ist $a<1$ eine Konstante, die bestimmt, wie schnell ,,vergessen'' wird. $z_0=0$ und $b_i=\lbrace 0$, falls der i-te Platz frei ist $-1$, wenn der i-te Platz besetzt ist. %TODO Klammer bitte schön machen, dass die Klammer groß ist und 0 und -1 untereinander stehen\\
-Falls $z_j>z_T$, wobei $z_T$ ein vom Fahrer gewählter Wert ist, wählt der Fahrer den j-ten Parkplatz, wenn j die Position des ersten freien Parkplatzes ist, bei dem die Ungleichung erfüllt ist. 
+Zuletzt wird die \emph{Linear-Operator}-Heuristik betrachtet. Dabei wird in jedem Simulationsschritt der Wert $z_i$ wie folgt berechnet: 
+\begin{align}
+z_i&=a\cdot z_{i-1}+b_i\\
+b_i&=\left\lbrace\begin{matrix}
+1, &\text{Wenn der aktuelle Parkplatz belegt ist}\\
+0, &\text{sonst}\\
+\end{matrix}\right.
+\end{align}
+Dabei ist $0<a<1$ eine Konstante, die bestimmt, wie schnell ,,vergessen'' wird. Kleine $a$ sorgen für ein schnelleres Vergessen als große. Der Startwert ist $z_0=0$.
+Falls $z_j>z_T$, wobei $z_T$ die Entscheidungsschranke der Heuristik ist, wählt der Fahrer den $j$-ten Parkplatz, wenn $j$ die Position des ersten freien Parkplatzes ist, bei dem die Ungleichung erfüllt ist. 
+
+Bei jeder der hier beschriebenen Heuristiken gilt zudem, dass ein Parkplatz abgelehnt wird, falls der nachfolgende unbesetzt ist. Diese Regel wird auch in den Simulationen dieser Arbeit angewandt.
 
 \subsection{Das Lernen der Heuristikparameter}
-Um jeweils die beste Konfiguration einer Heuristik zu ermitteln, wird ein Lernalgorithmus während der Simulation angewandt. Hutchinson et al \textbf{cite} verwenden in ihrem Model dazu einen evolutionären Ansatz, bei dem in regelmäßigen Intervallen eine Selektion der erfolgreichsten Heuristiken stattfindet. Zu Beginn der Simulation erhält jeder Autofahrer eine zufällige Heuristik mit ebenfalls zufälliger Konfiguration. Nach festgelegten Intervallen werden die erfolgreichsten 10 Heuristiken ermittelt und diese auf die gesamte Population übertragen. Um eine fortlaufende Verbesserung der gefundenen Heurstikkonfigurationen zu gewährleisten, erhält ein festgelegter Prozentsatz der Population neue zufällig konfigurierte Heuristiken. Bei entsprechender Simulationslänge ergibt sich dadurch ein Gleichgewichtszustand von Heuristiken. 
+Um jeweils die beste Konfiguration einer Heuristik zu ermitteln, wird ein Lernalgorithmus während der Simulation angewandt. Hutchinson et al \cite[The Evolutionary Algorithm, S. 14]{hutchinson} verwenden in ihrem Modell dazu einen evolutionären Ansatz, bei dem in regelmäßigen Intervallen eine Selektion der erfolgreichsten Heuristiken stattfindet. Zu Beginn der Simulation erhält jeder Autofahrer eine zufällige Heuristik mit ebenfalls zufälliger Konfiguration. Nach festgelegten Intervallen werden die erfolgreichsten 10 Heuristiken ermittelt und diese auf die gesamte Population übertragen. Um eine fortlaufende Verbesserung der gefundenen Heuristikkonfigurationen zu gewährleisten, erhält ein festgelegter Prozentsatz der Population neue zufällig konfigurierte Heuristiken. Bei entsprechender Simulationslänge ergibt sich dadurch ein Gleichgewichtszustand von Heuristiken. 
 
-Diese Art des Lernens ist jedoch in der Reaalität schwer anwendbar. Es ist unwahrscheinlich, dass sich die gesamte Population, also alle Autofahrer der Umgebung, regelmäßig treffen und die zehn besten Strategien feststellen. Im Allgemeinen kann davon ausgegangen werden, dass keine produktive Kommunikation zwischen den Individuen stattfindet. Um dennoch eine optimale Konfiguration für eine Heurstik lernen zu können, muss sich das Lernen auf die Erfahrungen des Individuums beschränken. 
+Diese Art des Lernens ist jedoch in der Realität schwer anwendbar. Es ist unwahrscheinlich, dass sich die gesamte Population, also alle Autofahrer der Umgebung, regelmäßig treffen und die zehn besten Strategien feststellen. Im Allgemeinen kann davon ausgegangen werden, dass keine produktive Kommunikation zwischen den Individuen stattfindet. Um dennoch eine optimale Konfiguration für eine Heuristik lernen zu können, muss sich das Lernen auf die Erfahrungen des Individuums beschränken. 
 
 Aus diesem Grund erhält in dem hier verwendeten Modell jeder Fahrer ein Gedächtnis, aus dem sich eine Konfiguration generieren lässt. Das hier verwendete Gedächtnis ist beschränkt, vergisst priorisierend und aktualisiert die Effizienz der Konfigurationen. In diesem Zusammenhang bedeutet \emph{priorisierendes Vergessen}, dass eine neue Konfiguration nur dann in das Gedächtnis aufgenommen wird, wenn mit dieser ein besserer Parkplatz gefunden wurde als mit einer der bereits im Gedächtnis vorhandenen Konfigurationen. Die Konfiguration, mit der der schwächste Parkplatz gefunden wurde, wird dann durch die neue ersetzt. Befindet sich die neue Konfiguration bereits im Gedächtnis wird lediglich die Güte des gefundenen Parkplatzes aktualisiert (die \emph{Aktualisierung der Effizienz}).
 
@@ -30,6 +40,6 @@ Um nun aus dem Gedächtnis eine neue Konfiguration $x^*$ zu lernen wird das gewi
 \end{align}
  berechnet. Dabei steht $M$ für das Gedächtnis, $x\in M$ für die Konfigurationen im Gedächtnis und $\omega : M \rightarrow \mathbb{R}$ für die Gewichtsfunktion. Für die Simulation wurden zwei Gewichtsfunktionen in Betracht gezogen.
 
-In der ersten Variante wird die Parkfläche in vier äquvidistante Abschnitte unterteilt. Jeder der Abschnitte erhält ein Gewicht, wobei Abschnitte ein größeres Gewicht erhalten wenn sie näher am Ziel liegen. Die gelernte Konfiguration tendiert dann stärker in Richtung derer, mit deren Hilfe bessere Parkplätze gefunden wurden. Dieser Effekt ist bei entsprechnd großen Gewichtsdifferenzen zwischen den Quadranten am Größten. Liegen jedoch hauptsächlich oder nur Konfigurationen mit dem gleichen Gewicht vor verläuft das Lernen langsamer. 
+In der ersten Variante wird die Parkfläche in vier äquidistante Abschnitte unterteilt. Jeder der Abschnitte erhält ein Gewicht, wobei Abschnitte ein größeres Gewicht erhalten wenn sie näher am Ziel liegen. Die gelernte Konfiguration tendiert dann stärker in Richtung derer, mit deren Hilfe bessere Parkplätze gefunden wurden. Dieser Effekt ist bei entsprechend großen Gewichtsdifferenzen zwischen den Quadranten am Größten. Liegen jedoch hauptsächlich oder nur Konfigurationen mit dem gleichen Gewicht vor verläuft das Lernen langsamer. 
 
-Um solche starken Sprünge in der Lerngeschwindigkeit zu vermeiden und um eine bessere differenzierung zwischen den Parkplätzen nahe des Ziels zu gewährleisten wird in der hier durchgeführten Simulation jedem Parkplatz eine individuelle Gewichtung zugeordnet. Die Gewichte betragen jeweils den Kehrwert der Entfernung des Parkplatzes zum Ziel. Der ideale Parkplatz direkt vor dem Ziel und mit Entfernung $0$ erhält das Gewicht $2$. Konfigurationen, mit denen in der Nähe des Ziels geparkt wurde, werden so wesentlich stärker gewichtet als diese, mit denen ein Parkplatz mit größerer Entfernung erreicht wurde. Gleichzeitig sind die Gewichte für die besten Parkplätze die mit den größten Differenzen zu ihren Vorgängern und Nachfolgern, womit eine hohe Lerngeschwindigkeit auch unter ähnlich guten Konfigurationen eintritt. 
+Um solche starken Sprünge in der Lerngeschwindigkeit zu vermeiden und um eine bessere Differenzierung zwischen den Parkplätzen nahe des Ziels zu gewährleisten wird in der hier durchgeführten Simulation jedem Parkplatz eine individuelle Gewichtung zugeordnet. Die Gewichte betragen jeweils den Kehrwert der Entfernung des Parkplatzes zum Ziel. Der ideale Parkplatz direkt vor dem Ziel und mit Entfernung $0$ erhält das Gewicht $2$. Konfigurationen, mit denen in der Nähe des Ziels geparkt wurde, werden so wesentlich stärker gewichtet als diese, mit denen ein Parkplatz mit größerer Entfernung erreicht wurde. Gleichzeitig sind die Gewichte für die besten Parkplätze die mit den größten Differenzen zu ihren Vorgängern und Nachfolgern, womit eine hohe Lerngeschwindigkeit auch unter ähnlich guten Konfigurationen eintritt. 
