--- a/Ausarbeitung/deckblatt.tex
+++ b/Ausarbeitung/deckblatt.tex
@@ -11,8 +11,7 @@ Eine Untersuchung von verschiedenen Heuristiken in unterschiedlichen Situationen
 Dozent&Dr. Martin Bracke\\
 Veranstaltung&Moderne Mathematik: Mathematisches Modellieren\\
 Semester& SS16\\
-Angefertigt von&Steffen Holzer (379484)\\
-&Ellen Wagner (387149)
+Angefertigt von&Steffen Holzer (379484) \& Ellen Wagner (387149)
 \end{tabular}
 \hrule
 \tableofcontents
